test controller fix decoration fix